welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:15: error: ';' expected but 'else' found.
  else {fini = true;};
  ^BDRBuggle:18: error: Unmatched closing brace '}' ignored here
	}
        ^